# exonote

./: MANIFEST.in  README.md  setup.cfg
docs/modules/: README.md
docs/modules/content/exonote.constant/: README.md
docs/modules/content/exonote.dto/: README.md
docs/modules/content/exonote.editor/: README.md
docs/modules/content/exonote.element/: README.md
docs/modules/content/exonote.error/: README.md
docs/modules/content/exonote.inserter.attachment/: README.md
docs/modules/content/exonote.inserter.codeblock/: README.md
docs/modules/content/exonote.inserter.heading/: README.md
docs/modules/content/exonote.inserter.link/: README.md
exonote/: __init__.py  __main__.py
exonote/constant/: __init__.py
exonote/dto/: __init__.py
exonote/editor/: __init__.py
exonote/element/: __init__.py
exonote/inserter/: __init__.py  attachment.py  codeblock.py  heading.py  link.py  program.py  table.py  util.py
exonote/parser/: __init__.py
exonote/pattern/: __init__.py
exonote/scanner/: __init__.py
exonote/statusbar/: __init__.py
exonote/style/: __init__.py
exonote/utils/: __init__.py
exonote/viewer/: __init__.py  util.py
tests/: util.py
tests/parser/: README  test_attachment_element.py  test_bold_element.py  test_code_element.py  test_codeblock_element.py  test_heading_element.py  test_italic_element.py  test_link_element.py  test_metablock_element.py  test_monospace_element.py  test_notice_element.py  test_program_element.py  test_strikethrough_element.py  test_underline_element.py  test_warning_element.py
(+64 files in other folders)
