[metadata]
name = exonote
version = file: VERSION
url = https://github.com/pyrustic/exonote
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Write and render rich, scriptable, and interactive notes
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    library
    note
    markdown
    exonote
    exn
    GUI
    render
    application
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    oscan
    tkutil

[options.entry_points]
console_scripts =
    exonote = exonote.__main__:main
